hphp/test/zend/good/ext/calendar/tests/jdtofrench.php
<?php
echo jdtofrench(0). "\n";
echo jdtofrench(2375840). "\n";
echo jdtofrench(2375850). "\n";
echo jdtofrench(2375940). "\n";
echo jdtofrench(2376345). "\n";
echo jdtofrench(2385940). "\n";
?>